Add fallback domain.

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,5 @@
+include /var/www/badssl/domains/fallback.conf;
+
 include /var/www/badssl/domains/badssl.com.conf;
 # include /var/www/badssl/domains/cbc.badssl.com.conf;
 include /var/www/badssl/domains/expired.badssl.com.conf;
