Use new wildcard certs.

--- a/domains/expired.badssl.com.conf
+++ b/domains/expired.badssl.com.conf
@@ -9,10 +9,7 @@ server {
   listen 443;
   server_name expired.badssl.com;
 
-  ssl on;
-  ssl_certificate /var/www/badssl/keys/expired.badssl.com.chain.pem;
-  ssl_certificate_key /var/www/badssl/keys/expired.badssl.com.key;
-
+  include /var/www/badssl/nginx-includes/wildcard.expired.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
 
   root /home/lgarron/badssl/domains/expired.badssl.com;
