--- a/domains/fallback.conf
+++ b/domains/fallback.conf
@@ -13,9 +13,8 @@ server {
   listen 443;
   server_name fallback;
 
-  ssl on;
-  ssl_certificate /var/www/badssl/keys/sha1-2016.badssl.com.chain.pem;
-  ssl_certificate_key /var/www/badssl/keys/sha1-2016.badssl.com.key;
+  include /var/www/badssl/nginx-includes/wildcard.normal.conf;
+  include /var/www/badssl/nginx-includes/tls-defaults.conf;
 
   root /home/lgarron/badssl/domains/fallback;
 }
