--- a/domains/rc4.badssl.com.conf
+++ b/domains/rc4.badssl.com.conf
@@ -13,10 +13,7 @@ server {
   listen 443;
   server_name rc4.badssl.com;
 
-  ssl on;
-  ssl_certificate /var/www/badssl/keys/rc4.badssl.com.chain.pem;
-  ssl_certificate_key /var/www/badssl/keys/rc4.badssl.com.key;
-
+  include /var/www/badssl/nginx-includes/wildcard.normal.conf;
   include /var/www/badssl/nginx-includes/tls-rc4.conf;
 
   root /home/lgarron/badssl/domains/rc4.badssl.com;
