--- a/domains/badssl.com.conf
+++ b/domains/badssl.com.conf
@@ -9,10 +9,7 @@ server {
   listen 443;
   server_name badssl.com;
 
-  ssl on;
-  ssl_certificate /var/www/badssl/keys/sha1-2016.badssl.com.chain.pem;
-  ssl_certificate_key /home/lgarron/.ssh/sha1-2016.badssl.com.key.decrypted;
-
+  include /var/www/badssl/nginx-includes/wildcard.self-signed.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
   
   root /home/lgarron/badssl/domains/badssl.com;
