--- a/domains/sha1-2016.badssl.com.conf
+++ b/domains/sha1-2016.badssl.com.conf
@@ -9,10 +9,7 @@ server {
   listen 443;
   server_name sha1-2016.badssl.com;
 
-  ssl on;
-  ssl_certificate /var/www/badssl/keys/sha1-2016.badssl.com.chain.pem;
-  ssl_certificate_key /var/www/badssl/keys/sha1-2016.badssl.com.key;
-
+  include /var/www/badssl/nginx-includes/wildcard.sha1-2016.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
 
   root /home/lgarron/badssl/domains/sha1-2016.badssl.com;
