--- a/domains/sha1.badssl.com.conf
+++ b/domains/sha1.badssl.com.conf
@@ -2,18 +2,15 @@ server {
   listen 80;
   server_name sha1.badssl.com;
   
-  return 302 https://sha1-2016.badssl.com$request_uri;
+  return 301 https://$server_name$request_uri;
 }
 
 server {
   listen 443;
   server_name sha1.badssl.com;
 
-  ssl on;
-  ssl_certificate /var/www/badssl/keys/sha1-2016.badssl.com.chain.pem;
-  ssl_certificate_key /var/www/badssl/keys/sha1-2016.badssl.com.key;
-
+  include /var/www/badssl/nginx-includes/wildcard.sha1-2016.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
 
-  return 302 https://sha1-2016.badssl.com$request_uri;
+  root /home/lgarron/badssl/domains/sha1.badssl.com;
 }
