--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,7 @@ include /var/www/badssl/domains/fallback.conf;
 include /var/www/badssl/domains/badssl.com.conf;
 include /var/www/badssl/domains/cbc.badssl.com.conf;
 include /var/www/badssl/domains/expired.badssl.com.conf;
+include /var/www/badssl/domains/mixed.badssl.com.conf;
 include /var/www/badssl/domains/rc4.badssl.com.conf;
 include /var/www/badssl/domains/sha1-2016.badssl.com.conf;
 include /var/www/badssl/domains/sha1.badssl.com.conf;
