--- a/domains/rc4.badssl.com.conf
+++ b/domains/rc4.badssl.com.conf
@@ -2,11 +2,7 @@ server {
   listen 80;
   server_name rc4.badssl.com;
   
-  root /home/lgarron/badssl/domains/rc4.badssl.com;
-
-  location / {
-    try_files $uri $uri/ =404;
-  }
+  return 301 https://$server_name$request_uri;
 }
 
 server {
