Create help.badssl.com and point the fallback to it.

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,21 @@
-include /var/www/badssl/domains/fallback.conf;
 
-include /var/www/badssl/domains/badssl.com.conf;
-include /var/www/badssl/domains/cbc.badssl.com.conf;
-include /var/www/badssl/domains/expired.badssl.com.conf;
-include /var/www/badssl/domains/mixed.badssl.com.conf;
-include /var/www/badssl/domains/rc4.badssl.com.conf;
-include /var/www/badssl/domains/sha1-2016.badssl.com.conf;
-include /var/www/badssl/domains/sha1.badssl.com.conf;
+# Fallback behaviour
+server {
+  listen 80;
+  server_name fallback;
+  
+  return 301 https://help.badssl.com/;
+}
+
+# Fallback behaviour
+server {
+  listen 443;
+  server_name fallback;
+
+  include /var/www/badssl/nginx-includes/wildcard.normal.conf;
+  include /var/www/badssl/nginx-includes/tls-defaults.conf;
+
+  return 301 https://help.badssl.com/;
+}
+
+include /var/www/badssl/domains/*.conf;
