--- a/nginx-includes/wildcard.sha1-2016.conf
+++ b/nginx-includes/wildcard.sha1-2016.conf
@@ -1,4 +1,4 @@
 
 ssl on;
 ssl_certificate /var/www/badssl/certs/wildcard.sha1-2016.pem;
-ssl_certificate_key /var/www/badssl/certs/wildcard.key;
+ssl_certificate_key /etc/keys/badssl.com.key;
