Move the help to the front page.

--- a/domains/badssl.com.conf
+++ b/domains/badssl.com.conf
@@ -9,8 +9,8 @@ server {
   listen 443;
   server_name badssl.com;
 
-  include /var/www/badssl/nginx-includes/wildcard.self-signed.conf;
+  include /var/www/badssl/nginx-includes/wildcard.normal.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
-  
+
   root /home/lgarron/badssl/domains/badssl.com;
 }
