--- a/domains/wrong.host.badssl.com.conf
+++ b/domains/wrong.host.badssl.com.conf
@@ -1,16 +1,16 @@
 server {
   listen 80;
-  server_name help.badssl.com;
+  server_name wrong.host.badssl.com;
   
   return 301 https://$server_name$request_uri;
 }
 
 server {
   listen 443;
-  server_name help.badssl.com;
+  server_name wrong.host.badssl.com;
 
   include /var/www/badssl/nginx-includes/wildcard.normal.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
 
-  root /home/lgarron/badssl/domains/help.badssl.com;
+  root /home/lgarron/badssl/domains/wrong.host.badssl.com;
 }
