Add common test code, including cors.json.

--- a/domains/rc4.badssl.com.conf
+++ b/domains/rc4.badssl.com.conf
@@ -11,6 +11,7 @@ server {
 
   include /var/www/badssl/nginx-includes/wildcard.normal.conf;
   include /var/www/badssl/nginx-includes/tls-rc4.conf;
+  include /var/www/badssl/common/common.conf;
 
   root /var/www/badssl/domains/rc4.badssl.com;
 }
