--- a/domains/cbc.badssl.com.conf
+++ b/domains/cbc.badssl.com.conf
@@ -11,6 +11,7 @@ server {
 
   include /var/www/badssl/nginx-includes/wildcard.normal.conf;
   include /var/www/badssl/nginx-includes/tls-cbc.conf;
+  include /var/www/badssl/common/common.conf;
 
   root /var/www/badssl/domains/cbc.badssl.com;
 }
