--- a/domains/hsts.badssl.com.conf
+++ b/domains/hsts.badssl.com.conf
@@ -11,6 +11,7 @@ server {
 
   include /var/www/badssl/nginx-includes/wildcard.normal.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
+  include /var/www/badssl/common/common.conf;
 
   add_header Strict-Transport-Security "max-age=15768000; includeSubDomains";
 
