--- a/domains/incomplete-chain.badssl.com.conf
+++ b/domains/incomplete-chain.badssl.com.conf
@@ -11,6 +11,7 @@ server {
 
   include /var/www/badssl/nginx-includes/wildcard.incomplete-chain.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
+  include /var/www/badssl/common/common.conf;
 
   root /var/www/badssl/domains/incomplete-chain.badssl.com;
 }
