--- a/domains/sha1-2016.badssl.com.conf
+++ b/domains/sha1-2016.badssl.com.conf
@@ -11,6 +11,7 @@ server {
 
   include /var/www/badssl/nginx-includes/wildcard.sha1-2016.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
+  include /var/www/badssl/common/common.conf;
 
   root /var/www/badssl/domains/sha1-2016.badssl.com;
 }
