Move CORS test into its own directory.

--- a/common/common.conf
+++ b/common/common.conf
@@ -5,7 +5,7 @@ location /test {
   root /var/www/badssl/common;
   try_files $uri $uri/ =404;
 
-  location /test/cors.json {
+  location /test/cors {
     add_header "Access-Control-Allow-Origin" "*";
   }
 }
