Added support for HSTS test.  Tests fine in IE10, Chrome, Firefox.

--- a/domains/hsts.badssl.com.conf
+++ b/domains/hsts.badssl.com.conf
@@ -1,8 +1,14 @@
 server {
   listen 80;
   server_name hsts.badssl.com;
+
+  include /var/www/badssl/common/common.conf;
   
-  return 301 https://$server_name$request_uri;
+  if ($args != "hsts") {
+    return 301 https://$server_name$request_uri;
+  }
+
+  root /var/www/badssl/domains/hsts.badssl.com;
 }
 
 server {
@@ -14,6 +20,10 @@ server {
   include /var/www/badssl/common/common.conf;
 
   add_header Strict-Transport-Security "max-age=15768000; includeSubDomains";
+
+  if ($args != "hsts") {
+    return 301 http://$server_name/?hsts;
+  }
 
   root /var/www/badssl/domains/hsts.badssl.com;
 }
