--- a/common/common.conf
+++ b/common/common.conf
@@ -7,6 +7,11 @@ location /test {
 
   location /test/cors {
     add_header "Access-Control-Allow-Origin" "*";
+
+    if ($http_referer ~* (youtube.com) ) {
+        access_log off;
+    }
+
   }
 }
 
