Changing the URL that gets bounced around to for the HSTS test.

--- a/domains/hsts.badssl.com.conf
+++ b/domains/hsts.badssl.com.conf
@@ -4,7 +4,7 @@ server {
 
   include /var/www/badssl/common/common.conf;
   
-  if ($args != "hsts") {
+  if ($args != "test-hsts-support") {
     return 301 https://$server_name$request_uri;
   }
 
@@ -21,8 +21,8 @@ server {
 
   add_header Strict-Transport-Security "max-age=15768000; includeSubDomains";
 
-  if ($args != "hsts") {
-    return 301 http://$server_name/?hsts;
+  if ($args != "test-hsts-support") {
+    return 301 http://$server_name/?test-hsts-support;
   }
 
   root /var/www/badssl/domains/hsts.badssl.com;
