--- a/domains/preloaded-hsts.badssl.com.conf
+++ b/domains/preloaded-hsts.badssl.com.conf
@@ -1,8 +1,10 @@
 server {
   listen 80;
   server_name preloaded-hsts.badssl.com;
-  
-  return 301 https://$server_name$request_uri;
+
+  include /var/www/badssl/common/common.conf;
+
+  root /var/www/badssl/domains/preloaded-hsts.badssl.com-http;
 }
 
 server {
@@ -15,5 +17,5 @@ server {
 
   add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload";
 
-  root /var/www/badssl/domains/preloaded-hsts.badssl.com;
+  root /var/www/badssl/domains/preloaded-hsts.badssl.com-https;
 }
