Move favicons into common folder. Fixes issue #3.

--- a/common/common.conf
+++ b/common/common.conf
@@ -15,6 +15,11 @@ location /test {
   }
 }
 
+location /icons {
+  root /var/www/badssl/common;
+  try_files $uri $uri/ =404;
+}
+
 location / {
   try_files $uri $uri/ =404;
 }
