Stop logging a few more domains affected by the YouTube experiment.

--- a/common/common.conf
+++ b/common/common.conf
@@ -8,7 +8,7 @@ location /test {
   location /test/cors {
     add_header "Access-Control-Allow-Origin" "*";
 
-    if ($http_referer ~* (youtube.com|ytimg.com) ) {
+    if ($http_referer ~* (youtube.com|ytimg.com|m.facebook.com|google) ) {
         access_log off;
     }
 
