Tell the browser to cache favicons for an hour.
This helps keep the logs clear / reduce network requests during a burst of testing from a single client, but allows reasonable turnaround for updating the icons in the wild.

--- a/common/common.conf
+++ b/common/common.conf
@@ -18,6 +18,7 @@ location /test {
 location /icons {
   root /var/www/badssl/common;
   try_files $uri $uri/ =404;
+  proxy_cache_valid 200 1h;
 }
 
 location / {
