Organize domains/ into categories.

--- a/domains/cipher-suite/cbc.badssl.com.conf
+++ b/domains/cipher-suite/cbc.badssl.com.conf
@@ -1,17 +1,17 @@
 server {
   listen 80;
-  server_name dh480.badssl.com;
-
+  server_name cbc.badssl.com;
+  
   return 301 https://$server_name$request_uri;
 }
 
 server {
   listen 443;
-  server_name dh480.badssl.com;
+  server_name cbc.badssl.com;
 
   include /var/www/badssl/nginx-includes/wildcard.normal.conf;
-  include /var/www/badssl/nginx-includes/tls-dh480.conf;
+  include /var/www/badssl/nginx-includes/tls-cbc.conf;
   include /var/www/badssl/common/common.conf;
 
-  root /var/www/badssl/domains/dh480.badssl.com;
+  root /var/www/badssl/domains/cipher-suite/cbc.badssl.com;
 }
