--- a/domains/diffie-hellman/dh480.badssl.com.conf
+++ b/domains/diffie-hellman/dh480.badssl.com.conf
@@ -1,17 +1,17 @@
 server {
   listen 80;
-  server_name mixed.badssl.com;
-  
+  server_name dh480.badssl.com;
+
   return 301 https://$server_name$request_uri;
 }
 
 server {
   listen 443;
-  server_name mixed.badssl.com;
+  server_name dh480.badssl.com;
 
   include /var/www/badssl/nginx-includes/wildcard.normal.conf;
-  include /var/www/badssl/nginx-includes/tls-defaults.conf;
+  include /var/www/badssl/nginx-includes/tls-dh480.conf;
   include /var/www/badssl/common/common.conf;
 
-  root /var/www/badssl/domains/mixed.badssl.com;
+  root /var/www/badssl/domains/diffie-hellman/dh480.badssl.com;
 }
