--- a/nginx.conf
+++ b/nginx.conf
@@ -18,4 +18,4 @@ server {
   return 302 https://badssl.com/;
 }
 
-include /var/www/badssl/domains/*.conf;
+include /var/www/badssl/domains/*/*.conf;
