--- a/domains/cert/rsa1024.badssl.com.conf
+++ b/domains/cert/rsa1024.badssl.com.conf
@@ -1,17 +1,17 @@
 server {
   listen 80;
-  server_name self-signed.badssl.com;
+  server_name rsa1024.badssl.com;
   
   return 301 https://$server_name$request_uri;
 }
 
 server {
   listen 443;
-  server_name self-signed.badssl.com;
+  server_name rsa1024.badssl.com;
 
-  include /var/www/badssl/nginx-includes/wildcard.self-signed.conf;
+  include /var/www/badssl/nginx-includes/wildcard.rsa1024.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
   include /var/www/badssl/common/common.conf;
 
-  root /var/www/badssl/domains/self-signed.badssl.com;
+  root /var/www/badssl/domains/cert/rsa1024.badssl.com;
 }
