--- a/domains/cert/sha256.badssl.com.conf
+++ b/domains/cert/sha256.badssl.com.conf
@@ -1,17 +1,17 @@
 server {
   listen 80;
-  server_name sha1-2017.badssl.com;
+  server_name sha256.badssl.com;
   
   return 301 https://$server_name$request_uri;
 }
 
 server {
   listen 443;
-  server_name sha1-2017.badssl.com;
+  server_name sha256.badssl.com;
 
-  include /var/www/badssl/nginx-includes/wildcard.sha1-2017.conf;
+  include /var/www/badssl/nginx-includes/wildcard.normal.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
   include /var/www/badssl/common/common.conf;
 
-  root /var/www/badssl/domains/sha1-2017.badssl.com;
+  root /var/www/badssl/domains/cert/sha256.badssl.com;
 }
