--- a/domains/cipher-suite/rc4.badssl.com.conf
+++ b/domains/cipher-suite/rc4.badssl.com.conf
@@ -1,17 +1,17 @@
 server {
   listen 80;
-  server_name cbc.badssl.com;
+  server_name rc4.badssl.com;
   
   return 301 https://$server_name$request_uri;
 }
 
 server {
   listen 443;
-  server_name cbc.badssl.com;
+  server_name rc4.badssl.com;
 
   include /var/www/badssl/nginx-includes/wildcard.normal.conf;
-  include /var/www/badssl/nginx-includes/tls-cbc.conf;
+  include /var/www/badssl/nginx-includes/tls-rc4.conf;
   include /var/www/badssl/common/common.conf;
 
-  root /var/www/badssl/domains/cbc.badssl.com;
+  root /var/www/badssl/domains/cipher-suite/rc4.badssl.com;
 }
