--- a/domains/misc/mixed.badssl.com.conf
+++ b/domains/misc/mixed.badssl.com.conf
@@ -1,17 +1,17 @@
 server {
   listen 80;
-  server_name dh2048.badssl.com;
-
+  server_name mixed.badssl.com;
+  
   return 301 https://$server_name$request_uri;
 }
 
 server {
   listen 443;
-  server_name dh2048.badssl.com;
+  server_name mixed.badssl.com;
 
   include /var/www/badssl/nginx-includes/wildcard.normal.conf;
-  include /var/www/badssl/nginx-includes/tls-dh2048.conf;
+  include /var/www/badssl/nginx-includes/tls-defaults.conf;
   include /var/www/badssl/common/common.conf;
 
-  root /var/www/badssl/domains/dh2048.badssl.com;
+  root /var/www/badssl/domains/misc/mixed.badssl.com;
 }
