Add robots.txt to all domains. Addresses issue #48.

--- a/common/common.conf
+++ b/common/common.conf
@@ -21,6 +21,11 @@ location /icons {
   proxy_cache_valid 200 1h;
 }
 
+location = /robots.txt {
+  root /var/www/badssl/common;
+  try_files $uri $uri/ =404;
+}
+
 location / {
   try_files $uri $uri/ =404;
 }
