--- a/domains/misc/mixed-script.badssl.com.conf
+++ b/domains/misc/mixed-script.badssl.com.conf
@@ -1,17 +1,17 @@
 server {
   listen 80;
-  server_name mixed-active.badssl.com;
+  server_name mixed-script.badssl.com;
   
   return 301 https://$server_name$request_uri;
 }
 
 server {
   listen 443;
-  server_name mixed-active.badssl.com;
+  server_name mixed-script.badssl.com;
 
   include /var/www/badssl/nginx-includes/wildcard.normal.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
   include /var/www/badssl/common/common.conf;
 
-  root /var/www/badssl/domains/misc/mixed-active.badssl.com;
+  root /var/www/badssl/domains/misc/mixed-script.badssl.com;
 }
