Add a few common mixed content examples. Addresses #33.

--- a/common/common.conf
+++ b/common/common.conf
@@ -26,6 +26,11 @@ location = /robots.txt {
   try_files $uri $uri/ =404;
 }
 
+location /mixed/ {
+  root /var/www/badssl/common;
+  try_files $uri $uri/ =404;
+}
+
 location / {
   try_files $uri $uri/ =404;
 }
