Expose certs. Addresses #56.

--- a/common/common.conf
+++ b/common/common.conf
@@ -31,6 +31,11 @@ location /mixed/ {
   try_files $uri $uri/ =404;
 }
 
+location /certs/ {
+  root /var/www/badssl/common;
+  try_files $uri $uri/ =404;
+}
+
 location / {
   try_files $uri $uri/ =404;
 }
