Add mixed/form. Addresses issue #33.

--- a/domains/misc/http.badssl.com.conf
+++ b/domains/misc/http.badssl.com.conf
@@ -3,6 +3,10 @@ server {
   server_name http.badssl.com;
   
   include /var/www/badssl/common/common.conf;
+
+  location = /resources/form-submitted.html {
+    error_page 405 =200 $uri;
+  }
   
   root /var/www/badssl/domains/misc/http.badssl.com;
 }
