Add http password site
(and update commit date)

--- a/common/common.conf
+++ b/common/common.conf
@@ -36,6 +36,11 @@ location /mixed/ {
   try_files $uri $uri/ =404;
 }
 
+location /password {
+  root /var/www/badssl/common;
+  try_files $uri $uri/ =404;
+}
+
 location /certs/ {
   root /var/www/badssl/common;
   try_files $uri $uri/ =404;
