--- a/domains/upgrade/hsts.badssl.com.conf
+++ b/domains/upgrade/hsts.badssl.com.conf
@@ -1,19 +1,21 @@
 server {
   listen 80;
-  server_name https-everywhere.badssl.com;
+  server_name hsts.badssl.com;
 
   include /var/www/badssl/common/common.conf;
 
-  root /var/www/badssl/domains/misc/https-everywhere.badssl.com-http;
+  root /var/www/badssl/domains/upgrade/hsts.badssl.com-http;
 }
 
 server {
   listen 443;
-  server_name https-everywhere.badssl.com;
+  server_name hsts.badssl.com;
 
   include /var/www/badssl/nginx-includes/wildcard.normal.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
   include /var/www/badssl/common/common.conf;
 
-  root /var/www/badssl/domains/misc/https-everywhere.badssl.com-https;
+  add_header Strict-Transport-Security "max-age=15768000; includeSubDomains";
+
+  root /var/www/badssl/domains/upgrade/hsts.badssl.com-https;
 }
