--- a/domains/upgrade/https-everywhere.badssl.com.conf
+++ b/domains/upgrade/https-everywhere.badssl.com.conf
@@ -1,21 +1,19 @@
 server {
   listen 80;
-  server_name hsts.badssl.com;
+  server_name https-everywhere.badssl.com;
 
   include /var/www/badssl/common/common.conf;
 
-  root /var/www/badssl/domains/hsts/hsts.badssl.com-http;
+  root /var/www/badssl/domains/upgrade/https-everywhere.badssl.com-http;
 }
 
 server {
   listen 443;
-  server_name hsts.badssl.com;
+  server_name https-everywhere.badssl.com;
 
   include /var/www/badssl/nginx-includes/wildcard.normal.conf;
   include /var/www/badssl/nginx-includes/tls-defaults.conf;
   include /var/www/badssl/common/common.conf;
 
-  add_header Strict-Transport-Security "max-age=15768000; includeSubDomains";
-
-  root /var/www/badssl/domains/hsts/hsts.badssl.com-https;
+  root /var/www/badssl/domains/upgrade/https-everywhere.badssl.com-https;
 }
