Stop using inline CSS.

--- a/common/common.conf
+++ b/common/common.conf
@@ -21,6 +21,11 @@ location /icons {
   proxy_cache_valid 200 1h;
 }
 
+location = /style.css {
+  root /var/www/badssl/common;
+  try_files $uri $uri/ =404;
+}
+
 location = /crossdomain.xml {
   root /var/www/badssl/common;
   try_files $uri $uri/ =404;
