Add CORS to the mixed font resource. Fixes #85.

--- a/domains/misc/http.badssl.com.conf
+++ b/domains/misc/http.badssl.com.conf
@@ -4,6 +4,10 @@ server {
   
   include /var/www/badssl/common/common.conf;
 
+  location = /resources/font.ttf {
+    add_header "Access-Control-Allow-Origin" "*";
+  }
+
   location = /resources/form-submitted.html {
     error_page 405 =200 $uri;
   }
