Never cache anything. Closes #47.

--- a/common/common.conf
+++ b/common/common.conf
@@ -1,6 +1,9 @@
 
 # The top-level root is specified by each individual .conf file.
 
+# https://github.com/lgarron/badssl.com/issues/47
+add_header "Cache-Control" "no-store";
+
 location /test {
   root /var/www/badssl/common;
   try_files $uri $uri/ =404;
