Fix the jekyll templating for all human beings that don't own badssl.com

--- a/common/common.conf
+++ b/common/common.conf
@@ -5,7 +5,7 @@
 add_header "Cache-Control" "no-store";
 
 location /test {
-  root /var/www/badssl/common;
+  root /var/www/badssl/_site/common;
   try_files $uri $uri/ =404;
 
   location /test/cors {
@@ -19,33 +19,33 @@ location /test {
 }
 
 location /icons {
-  root /var/www/badssl/common;
+  root /var/www/badssl/_site/common;
   try_files $uri $uri/ =404;
   proxy_cache_valid 200 1h;
 }
 
 location = /style.css {
-  root /var/www/badssl/common;
+  root /var/www/badssl/_site/common;
   try_files $uri $uri/ =404;
 }
 
 location = /crossdomain.xml {
-  root /var/www/badssl/common;
+  root /var/www/badssl/_site/common;
   try_files $uri $uri/ =404;
 }
 
 location = /robots.txt {
-  root /var/www/badssl/common;
+  root /var/www/badssl/_site/common;
   try_files $uri $uri/ =404;
 }
 
 location /mixed/ {
-  root /var/www/badssl/common;
+  root /var/www/badssl/_site/common;
   try_files $uri $uri/ =404;
 }
 
 location /certs/ {
-  root /var/www/badssl/common;
+  root /var/www/badssl/_site/common;
   try_files $uri $uri/ =404;
 }
 
