Changes to nginx configurations

--- a/common/common.conf
+++ b/common/common.conf
@@ -1,11 +1,13 @@
+---
+---
 
 # The top-level root is specified by each individual .conf file.
 
-# https://github.com/lgarron/badssl.com/issues/47
+# https://github.com/lgarron/{{ site.domain }}/issues/47
 add_header "Cache-Control" "no-store";
 
 location /test {
-  root /var/www/badssl/_site/common;
+  root {{ site.serving-path }}/common;
   try_files $uri $uri/ =404;
 
   location /test/cors {
@@ -19,33 +21,33 @@ location /test {
 }
 
 location /icons {
-  root /var/www/badssl/_site/common;
+  root {{ site.serving-path }}/common;
   try_files $uri $uri/ =404;
   proxy_cache_valid 200 1h;
 }
 
 location = /style.css {
-  root /var/www/badssl/_site/common;
+  root {{ site.serving-path }}/common;
   try_files $uri $uri/ =404;
 }
 
 location = /crossdomain.xml {
-  root /var/www/badssl/_site/common;
+  root {{ site.serving-path }}/common;
   try_files $uri $uri/ =404;
 }
 
 location = /robots.txt {
-  root /var/www/badssl/_site/common;
+  root {{ site.serving-path }}/common;
   try_files $uri $uri/ =404;
 }
 
 location /mixed/ {
-  root /var/www/badssl/_site/common;
+  root {{ site.serving-path }}/common;
   try_files $uri $uri/ =404;
 }
 
 location /certs/ {
-  root /var/www/badssl/_site/common;
+  root {{ site.serving-path }}/common;
   try_files $uri $uri/ =404;
 }
 
