--- a/nginx-includes/wildcard.sha1-2016.conf
+++ b/nginx-includes/wildcard.sha1-2016.conf
@@ -1,4 +1,6 @@
+---
+---
 
 ssl on;
-ssl_certificate /var/www/badssl/certs/wildcard.sha1-2016.pem;
+ssl_certificate {{ site.serving-path }}/certs/wildcard.sha1-2016.pem;
 ssl_certificate_key /etc/keys/badssl.com.key;
