--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,13 @@
+---
+---
 server_names_hash_bucket_size 128;
 
 # Fallback behaviour
 server {
   listen 80;
   server_name fallback;
-  
-  return 302 https://badssl.com/;
+
+  return 302 "https://{{ site.domain }}/";
 }
 
 # Fallback behaviour
@@ -13,10 +15,11 @@ server {
   listen 443;
   server_name fallback;
 
-  include /var/www/badssl/nginx-includes/wildcard.normal.conf;
-  include /var/www/badssl/nginx-includes/tls-defaults.conf;
+  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
+  include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
 
-  return 302 https://badssl.com/;
+  return 302 "https://{{ site.domain }}/";
 }
 
-include /var/www/badssl/domains/*/*.conf;
+include {{ site.serving-path }}/domains/misc.conf;
+include {{ site.serving-path }}/domains/*/*.conf;
