--- a/nginx-includes/tls-mozilla-modern.conf
+++ b/nginx-includes/tls-mozilla-modern.conf
@@ -1,4 +1,6 @@
-ssl_dhparam /var/www/badssl/certs/dh2048.pem;
+---
+---
+ssl_dhparam {{ site.serving-path }}/certs/dh2048.pem;
 
 ssl_session_timeout 5m;
 
