--- a/nginx-includes/wildcard.incomplete-chain.conf
+++ b/nginx-includes/wildcard.incomplete-chain.conf
@@ -1,4 +1,6 @@
+---
+---
 
 ssl on;
-ssl_certificate /var/www/badssl/certs/wildcard.incomplete-chain.pem;
+ssl_certificate {{ site.serving-path }}/certs/wildcard.incomplete-chain.pem;
 ssl_certificate_key /etc/keys/badssl.com.key;
