--- a/nginx-includes/wildcard.rsa512.conf
+++ b/nginx-includes/wildcard.rsa512.conf
@@ -1,4 +1,6 @@
+---
+---
 
 ssl on;
-ssl_certificate /var/www/badssl/certs/wildcard.rsa512.pem;
+ssl_certificate {{ site.serving-path }}/certs/wildcard.rsa512.pem;
 ssl_certificate_key /etc/keys/rsa512.badssl.com.key;
