Changes to certs configurations

--- a/certs/cert-generator/badssl-wildcard.conf
+++ b/certs/cert-generator/badssl-wildcard.conf
@@ -1,3 +1,5 @@
+---
+---
 [ req ]
 default_bits        = 2048
 default_keyfile     = ../self-signed/badssl.key
@@ -11,7 +13,7 @@ countryName         = US
 stateOrProvinceName = California
 localityName        = San Francisco
 organizationName    = BadSSL
-commonName          = *.badssl.com
+commonName          = *.{{ site.domain }}
 
 [ req_v3_usr ]
 basicConstraints = CA:FALSE
@@ -19,5 +21,5 @@ keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectAltName = @alt_names
 
 [ alt_names ]
-DNS.1 = *.badssl.com
-DNS.2 = badssl.com
+DNS.1 = *.{{ site.domain }}
+DNS.2 = {{ site.domain }}
