Add subjectAltNames to known-bad CSRs because common name is deprecated for specifying DNS names.

--- a/certs/cert-generator/badssl-dsdtestprovider.conf
+++ b/certs/cert-generator/badssl-dsdtestprovider.conf
@@ -18,3 +18,8 @@ commonName          = dsdtestprovider.{{ site.domain }}
 [ req_v3_usr ]
 basicConstraints = CA:true
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
+subjectAltName = @alt_names
+
+[ alt_names ]
+DNS.1 = dsdtestprovider.{{ site.domain }}
+
