--- a/certs/cert-generator/badssl-edellroot.conf
+++ b/certs/cert-generator/badssl-edellroot.conf
@@ -18,3 +18,7 @@ commonName          = edellroot.{{ site.domain }}
 [ req_v3_usr ]
 basicConstraints = CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
+subjectAltName = @alt_names
+
+[ alt_names ]
+DNS.1 = edellroot.{{ site.domain }}
