--- a/certs/cert-generator/badssl-superfish.conf
+++ b/certs/cert-generator/badssl-superfish.conf
@@ -18,3 +18,7 @@ commonName          = superfish.{{ site.domain }}
 [ req_v3_usr ]
 basicConstraints = CA:true
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
+subjectAltName = @alt_names
+
+[ alt_names ]
+DNS.1 = superfish.{{ site.domain }}
