Create cert-chains and move appropriate things.

--- a/certs/cert-generator/badssl-1000-sans.conf
+++ b/certs/cert-generator/badssl-1000-sans.conf
@@ -2,7 +2,7 @@
 ---
 [ req ]
 default_bits        = 2048
-default_keyfile     = ../self-signed/badssl.key
+default_keyfile     = ../keys/badssl.key
 distinguished_name  = req_distinguished_name
 encrypt_key         = no
 prompt              = no
