--- a/domains/known-bad/superfish.conf
+++ b/domains/known-bad/superfish.conf
@@ -12,7 +12,7 @@ server {
   server_name superfish.{{ site.domain }};
 
   ssl on;
-  ssl_certificate {{ site.serving-path }}/certs/superfish.pem;
+  ssl_certificate {{ site.serving-path }}/certs/cert-chains/superfish.pem;
   ssl_certificate_key /etc/keys/badssl.com.key;
 
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
