--- a/nginx-includes/wildcard.normal.conf
+++ b/nginx-includes/wildcard.normal.conf
@@ -2,5 +2,5 @@
 ---
 
 ssl on;
-ssl_certificate {{ site.serving-path }}/certs/wildcard.normal.pem;
+ssl_certificate {{ site.serving-path }}/certs/cert-chains/wildcard.normal.pem;
 ssl_certificate_key /etc/keys/badssl.com.key;
