--- a/certs/cert-generator/badssl-root.conf
+++ b/certs/cert-generator/badssl-root.conf
@@ -2,7 +2,7 @@
 ---
 [ req ]
 default_bits        = 4096
-default_keyfile     = ../self-signed/badssl-root.key
+default_keyfile     = ../keys/badssl-root.key
 default_md          = sha256
 distinguished_name  = req_distinguished_name
 encrypt_key         = no
