--- a/nginx-includes/1000-sans.conf
+++ b/nginx-includes/1000-sans.conf
@@ -2,5 +2,5 @@
 ---
 
 ssl on;
-ssl_certificate {{ site.serving-path }}/certs/1000-sans.badssl.com.pem;
+ssl_certificate {{ site.serving-path }}/certs/cert-chains/1000-sans.badssl.com.pem;
 ssl_certificate_key /etc/keys/badssl.com.key;
