--- a/nginx-includes/rsa8192.conf
+++ b/nginx-includes/rsa8192.conf
@@ -2,5 +2,5 @@
 ---
 
 ssl on;
-ssl_certificate {{ site.serving-path }}/certs/rsa8192.badssl.com.pem;
+ssl_certificate {{ site.serving-path }}/certs/cert-chains/rsa8192.badssl.com.pem;
 ssl_certificate_key /etc/keys/rsa8192.badssl.com.key;
