--- a/nginx-includes/tls-dh-composite.conf
+++ b/nginx-includes/tls-dh-composite.conf
@@ -1,6 +1,6 @@
 ---
 ---
-ssl_dhparam {{ site.serving-path }}/certs/dh-composite.pem;
+ssl_dhparam {{ site.serving-path }}/certs/cert-chains/dh-composite.pem;
 
 ssl_session_timeout 5m;
 
