Hopefully fix all the jekyll issues

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 # `domain` and `http-domain` are populated via environment.
 
 # Build settings
+keep_files: ["certs/self-signed"]
 markdown: kramdown
