Restructure folders and remove files without clear use.

--- a/domains/cert/10000-sans/10000-sans.conf
+++ b/domains/cert/10000-sans/10000-sans.conf
@@ -11,7 +11,10 @@ server {
   listen 443;
   server_name 10000-sans.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/10000-sans.conf;
+  ssl on;
+  ssl_certificate {{ site.serving-path }}/certs/10000-sans.badssl.com.pem;
+  ssl_certificate_key /etc/keys/badssl.com.key;
+  
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
