--- a/domains/cert/rsa8192/rsa8192.conf
+++ b/domains/cert/rsa8192/rsa8192.conf
@@ -11,7 +11,10 @@ server {
   listen 443;
   server_name rsa8192.{{ site.domain }};
 
-  include {{ site.serving-path }}/nginx-includes/rsa8192.conf;
+  ssl on;
+  ssl_certificate {{ site.serving-path }}/certs/rsa8192.badssl.com.pem;
+  ssl_certificate_key /etc/keys/rsa8192.badssl.com.key;
+
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
