--- a/domains/cipher-suite/null/null.conf
+++ b/domains/cipher-suite/null/null.conf
@@ -3,7 +3,7 @@
 server {
   listen 80;
   server_name null.{{ site.domain }};
-  
+
   return 301 https://$server_name$request_uri;
 }
 
@@ -11,8 +11,12 @@ server {
   listen 443;
   server_name null.{{ site.domain }};
 
+  ssl_session_timeout 5m;
+  ssl_protocols TLSv1.1 TLSv1.2;
+  ssl_ciphers 'NULL:aNULL:eNULL:!RC4:!EXPORT:!DES:!CBC:!3DES:!MD5:!PSK';
+  ssl_prefer_server_ciphers on;
+
   include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
-  include {{ site.serving-path }}/nginx-includes/tls-null.conf;
   include {{ site.serving-path }}/common/common.conf;
 
   root {{ site.serving-path }}/domains/cipher-suite/null;
