--- a/nginx.conf
+++ b/nginx.conf
@@ -22,4 +22,4 @@ server {
 }
 
 include {{ site.serving-path }}/domains/misc.conf;
-include {{ site.serving-path }}/domains/*/*.conf;
+include {{ site.serving-path }}/domains/**/*.conf;
