Use a fallback certificate for port 443 to avoid SNI connection false positives. Addresses #146.
Ideally, we'd fail with a hard connection termination iff there's no SNI in the request. But this at least avoids successful connection false positives.

--- a/domains/misc/badssl.com.conf
+++ b/domains/misc/badssl.com.conf
@@ -15,5 +15,5 @@ server {
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
 
-  root {{ site.serving-path }}/domains/misc/{{ site.domain }};
+  root {{ site.serving-path }}/domains/misc/badssl.com;
 }
