--- a/nginx.conf
+++ b/nginx.conf
@@ -2,24 +2,8 @@
 ---
 server_names_hash_bucket_size 128;
 
-# Fallback behaviour
-server {
-  listen 80;
-  server_name fallback;
+# Specify the fallback behaviour first.
+include {{ site.serving-path }}/fallback.conf;
 
-  return 302 "https://{{ site.domain }}/";
-}
-
-# Fallback behaviour
-server {
-  listen 443;
-  server_name fallback;
-
-  include {{ site.serving-path }}/nginx-includes/wildcard.normal.conf;
-  include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
-
-  return 302 "https://{{ site.domain }}/";
-}
-
-include {{ site.serving-path }}/domains/misc.conf;
+# Now include the known subdomains.
 include {{ site.serving-path }}/domains/*/*.conf;
