Convert the cert generation script into a Makefile.

--- a/certs/src/conf/fallback.conf
+++ b/certs/src/conf/fallback.conf
@@ -1,8 +1,5 @@
----
----
 [ req ]
 default_bits        = 2048
-default_keyfile     = ../self-signed/badssl.key
 distinguished_name  = req_distinguished_name
 encrypt_key         = no
 prompt              = no
@@ -12,14 +9,13 @@ req_extensions      = req_v3_usr
 countryName         = US
 stateOrProvinceName = California
 localityName        = San Francisco
-organizationName    = BadSSL
-commonName          = dsdtestprovider.{{ site.domain }}
+organizationName    = BadSSL Fallback. Unknown subdomain or no SNI.
+commonName          = badssl-fallback-unknown-subdomain-or-no-sni
 
 [ req_v3_usr ]
-basicConstraints = CA:true
+basicConstraints = CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectAltName = @alt_names
 
 [ alt_names ]
-DNS.1 = dsdtestprovider.{{ site.domain }}
-
+DNS.1 = badssl-fallback-unknown-subdomain-or-no-sni
