--- a/certs/src/conf/subdomain-dsdtestprovider.conf
+++ b/certs/src/conf/subdomain-dsdtestprovider.conf
@@ -1,8 +1,5 @@
----
----
 [ req ]
 default_bits        = 2048
-default_keyfile     = ../self-signed/badssl.key
 distinguished_name  = req_distinguished_name
 encrypt_key         = no
 prompt              = no
@@ -13,7 +10,7 @@ countryName         = US
 stateOrProvinceName = California
 localityName        = San Francisco
 organizationName    = BadSSL
-commonName          = superfish.{{ site.domain }}
+commonName          = dsdtestprovider.__DOMAIN__
 
 [ req_v3_usr ]
 basicConstraints = CA:true
@@ -21,4 +18,5 @@ keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectAltName = @alt_names
 
 [ alt_names ]
-DNS.1 = superfish.{{ site.domain }}
+DNS.1 = dsdtestprovider.__DOMAIN__
+
