--- a/domains/known-bad/dsdtestprovider.conf
+++ b/domains/known-bad/dsdtestprovider.conf
@@ -12,8 +12,8 @@ server {
   server_name dsdtestprovider.{{ site.domain }};
 
   ssl on;
-  ssl_certificate {{ site.serving-path }}/certs/dsdtestprovider.pem;
-  ssl_certificate_key /etc/keys/badssl.com.key;
+  ssl_certificate {{ site.cert-path }}/subdomain-dsdtestprovider.pem;
+  ssl_certificate_key /etc/keys/leaf-main.key;
 
   include {{ site.serving-path }}/nginx-includes/tls-defaults.conf;
   include {{ site.serving-path }}/common/common.conf;
