--- a/nginx-includes/10000-sans.conf
+++ b/nginx-includes/10000-sans.conf
@@ -2,5 +2,5 @@
 ---
 
 ssl on;
-ssl_certificate {{ site.serving-path }}/certs/10000-sans.badssl.com.pem;
-ssl_certificate_key /etc/keys/badssl.com.key;
+ssl_certificate {{ site.cert-path }}/subdomain-10000-sans.pem;
+ssl_certificate_key /etc/keys/leaf-main.key;
