--- a/nginx-includes/rsa8192.conf
+++ b/nginx-includes/rsa8192.conf
@@ -2,5 +2,5 @@
 ---
 
 ssl on;
-ssl_certificate {{ site.serving-path }}/certs/rsa8192.badssl.com.pem;
-ssl_certificate_key /etc/keys/rsa8192.badssl.com.key;
+ssl_certificate {{ site.cert-path }}/wildcard-rsa8192.pem;
+ssl_certificate_key /etc/keys/leaf-rsa8192.key;
