--- a/nginx-includes/tls-dh-small-subgroup.conf
+++ b/nginx-includes/tls-dh-small-subgroup.conf
@@ -1,6 +1,6 @@
 ---
 ---
-ssl_dhparam {{ site.serving-path }}/certs/dh-small-subgroup.pem;
+ssl_dhparam {{ site.dhparam-path }}/dh-small-subgroup.pem;
 
 ssl_session_timeout 5m;
 
