--- a/nginx-includes/wildcard.expired.conf
+++ b/nginx-includes/wildcard.expired.conf
@@ -2,5 +2,5 @@
 ---
 
 ssl on;
-ssl_certificate {{ site.serving-path }}/certs/wildcard.expired.pem;
-ssl_certificate_key /etc/keys/badssl.com.key;
+ssl_certificate {{ site.cert-path }}/wildcard-expired.pem;
+ssl_certificate_key /etc/keys/leaf-main.key;
