--- a/certs/src/conf/subdomain-edellroot.conf
+++ b/certs/src/conf/subdomain-edellroot.conf
@@ -1,8 +1,5 @@
----
----
 [ req ]
 default_bits        = 2048
-default_keyfile     = ../self-signed/badssl.key
 distinguished_name  = req_distinguished_name
 encrypt_key         = no
 prompt              = no
@@ -13,7 +10,7 @@ countryName         = US
 stateOrProvinceName = California
 localityName        = San Francisco
 organizationName    = BadSSL
-commonName          = *.{{ site.domain }}
+commonName          = edellroot.__DOMAIN__
 
 [ req_v3_usr ]
 basicConstraints = CA:FALSE
@@ -21,5 +18,4 @@ keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectAltName = @alt_names
 
 [ alt_names ]
-DNS.1 = *.{{ site.domain }}
-DNS.2 = {{ site.domain }}
+DNS.1 = edellroot.__DOMAIN__
