--- a/certs/src/conf/subdomain-superfish.conf
+++ b/certs/src/conf/subdomain-superfish.conf
@@ -1,8 +1,5 @@
----
----
 [ req ]
 default_bits        = 2048
-default_keyfile     = ../self-signed/badssl.key
 distinguished_name  = req_distinguished_name
 encrypt_key         = no
 prompt              = no
@@ -13,12 +10,12 @@ countryName         = US
 stateOrProvinceName = California
 localityName        = San Francisco
 organizationName    = BadSSL
-commonName          = edellroot.{{ site.domain }}
+commonName          = superfish.__DOMAIN__
 
 [ req_v3_usr ]
-basicConstraints = CA:FALSE
+basicConstraints = CA:true
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectAltName = @alt_names
 
 [ alt_names ]
-DNS.1 = edellroot.{{ site.domain }}
+DNS.1 = superfish.__DOMAIN__
