--- a/certs/src/conf/wildcard-main.conf
+++ b/certs/src/conf/wildcard-main.conf
@@ -1,8 +1,5 @@
----
----
 [ req ]
 default_bits        = 2048
-default_keyfile     = ../self-signed/badssl.key
 distinguished_name  = req_distinguished_name
 encrypt_key         = no
 prompt              = no
@@ -12,8 +9,8 @@ req_extensions      = req_v3_usr
 countryName         = US
 stateOrProvinceName = California
 localityName        = San Francisco
-organizationName    = BadSSL Fallback. Unknown subdomain or no SNI.
-commonName          = badssl-fallback-unknown-subdomain-or-no-sni
+organizationName    = BadSSL
+commonName          = *.__DOMAIN__
 
 [ req_v3_usr ]
 basicConstraints = CA:FALSE
@@ -21,4 +18,5 @@ keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectAltName = @alt_names
 
 [ alt_names ]
-DNS.1 = badssl-fallback-unknown-subdomain-or-no-sni
+DNS.1 = *.__DOMAIN__
+DNS.2 = __DOMAIN__
