--- a/nginx-includes/tls-dh1024.conf
+++ b/nginx-includes/tls-dh1024.conf
@@ -1,6 +1,6 @@
 ---
 ---
-ssl_dhparam {{ site.serving-path }}/certs/dh1024.pem;
+ssl_dhparam {{ site.dhparam-path }}/dh1024.pem;
 
 ssl_session_timeout 5m;
 
