--- a/nginx-includes/wildcard.rsa1024.conf
+++ b/nginx-includes/wildcard.rsa1024.conf
@@ -2,5 +2,5 @@
 ---
 
 ssl on;
-ssl_certificate {{ site.serving-path }}/certs/wildcard.rsa1024.pem;
-ssl_certificate_key /etc/keys/rsa1024.badssl.com.key;
+ssl_certificate {{ site.cert-path }}/wildcard-rsa1024.pem;
+ssl_certificate_key /etc/keys/leaf-rsa1024.key;
