--- a/nginx-includes/wildcard.rsa512.conf
+++ b/nginx-includes/wildcard.rsa512.conf
@@ -2,5 +2,5 @@
 ---
 
 ssl on;
-ssl_certificate {{ site.serving-path }}/certs/wildcard.rsa512.pem;
-ssl_certificate_key /etc/keys/rsa512.badssl.com.key;
+ssl_certificate {{ site.cert-path }}/wildcard-rsa512.pem;
+ssl_certificate_key /etc/keys/leaf-rsa512.key;
