--- a/nginx-includes/wildcard.self-signed.conf
+++ b/nginx-includes/wildcard.self-signed.conf
@@ -2,5 +2,5 @@
 ---
 
 ssl on;
-ssl_certificate {{ site.serving-path }}/certs/wildcard.self-signed.pem;
-ssl_certificate_key /etc/keys/badssl.com.key;
+ssl_certificate {{ site.cert-path }}/wildcard-self-signed.pem;
+ssl_certificate_key /etc/keys/leaf-main.key;
